angular-front-end/angular-front-end-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: angular-front-end-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: angular-front-end
  template:
    metadata:
      labels:
        app: angular-front-end
    spec:
      containers:
        - name: angular-front-end
          image: localhost:5000/angular-front-end
          ports:
            - containerPort: 80
